--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,7 +3,7 @@
     <div class="header-logo">
       <a href="#">
         <svg class="header-logo-icon">
-          <use xlink:href="image/sprite.svg#icon-instagram"></use>
+          <use xlink:href="/image/sprite.svg#icon-instagram"></use>
         </svg>
       </a>
       <span>Instagram</span>
