--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,13 +1,14 @@
 <header class="header">
   <div class="header-content">
     <div class="header-logo">
-      <a href="#">
+      <a href="/users/home">
         <svg class="header-logo-icon">
           <use xlink:href="/image/sprite.svg#icon-instagram"></use>
         </svg>
       </a>
       <span>Instagram</span>
     </div>
+    <%if(locals.user){%>
     <form class="header-search">
       <input type="text" placeholder="search here . . " />
       <button>
@@ -18,10 +19,18 @@
     </form>
     <div class="header-actions">
       <ul class="header-actions-list">
-        <li><a class="header-post" href="#">post</a></li>
-        <li><a href="#">profile</a></li>
-        <li><a href="#">logout</a></li>
+        <li><a class="header-post">post</a></li>
+        <li><a href="/users/profile">profile</a></li>
+        <li><a href="/users/sign-out">logout</a></li>
       </ul>
     </div>
+    <%}else{%>
+    <div class="header-actions">
+      <ul class="header-actions-list">
+        <li><a href="/users/sign-in">sign in</a></li>
+        <li><a href="/users/sign-up">sign up</a></li>
+      </ul>
+    </div>
+    <%}%>
   </div>
 </header>
