--- a/views/new-post.ejs
+++ b/views/new-post.ejs
@@ -5,7 +5,7 @@
     class="new-post-container"
     method="POST"
   >
-    <input type="file" name="image" />
+    <input type="file" name="image" required />
     <textarea
       name="caption"
       placeholder="Write a caption"
