--- a/views/new-post.ejs
+++ b/views/new-post.ejs
@@ -9,7 +9,7 @@
     <textarea
       name="caption"
       placeholder="Write a caption"
-      class="new-post-caption"
+      class="new-post-caption mytextarea"
     ></textarea>
     <input class="new-post-submit" type="submit" value="Share" />
   </form>
