--- a/views/user-sign-in.ejs
+++ b/views/user-sign-in.ejs
@@ -26,7 +26,7 @@
       <div class="sign-in-info" id="sign-in-info">
         <h1 class="form-heading">Sign In</h1>
         <div class="social-media-buttons">
-          <a href="#" class="icon">
+          <a href="/users/auth/google" class="icon">
             <svg>
               <use xlink:href="/image/sprite.svg#icon-google"></use>
             </svg>
