--- a/views/user-sign-up.ejs
+++ b/views/user-sign-up.ejs
@@ -21,7 +21,7 @@
       <div class="sign-up-info" id="sign-up-info">
         <h1 class="form-heading">Sign Up</h1>
         <div class="social-media-buttons">
-          <a href="#" class="icon">
+          <a href="/users/auth/google" class="icon">
             <svg>
               <use xlink:href="/image/sprite.svg#icon-google"></use>
             </svg>
