--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -15,7 +15,10 @@
       <use xlink:href="/image/sprite.svg#icon-heart-outlined"></use>
     </svg>
   </a>
-  <a class="post-comment-delete" href="/comments/destroy/<%=comment.id%>">
+  <a
+    class="post-comment-delete delete-comment-button"
+    href="/comments/destroy/<%=comment.id%>"
+  >
     <svg>
       <use xlink:href="/image/sprite.svg#icon-circle-with-cross"></use>
     </svg>
