--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,4 +1,4 @@
-<div class="post-dialog">
+<div id="post-<%=post.id%>" class="post-dialog">
   <div class="post-header">
     <a href="#"
       ><img class="post-header-image" src="<%=post.user.avatar%>"
@@ -8,7 +8,7 @@
     >
     <div class="post-header-more">
       <%if(locals.user && locals.user.id==post.user.id){%>
-      <a href="/posts/destroy/<%=post.id%>">
+      <a class="delete-post-button" href="/posts/destroy/<%=post.id%>">
         <svg class="post-header-more-icon">
           <use xlink:href="/image/sprite.svg#icon-circle-with-cross"></use>
         </svg>
@@ -29,39 +29,25 @@
         <span class="post-caption-content"><%=post.caption%></span>
       </p>
     </div>
-    <div class="post-comments">
+    <div id="post-comments-<%=post.id%>" class="post-comments">
       <%for( comment of post.comments){%> <%- include('comment')%> <%}%>
-      <!-- <div class="post-comment">
-          <a href="#">
-            <img class="post-comment-user" src="/image/profile-pic.jpg" />
-          </a>
-
-          <p class="post-comment-body">
-            <a href="#" class="post-comment-username">hanna.khandwal</a>
-            <span class="post-comment-content"
-              >its so much fun we will never forget🤩🤩</span
-            >
-          </p>
-          <a class="post-comment-like" href="#">
-            <svg>
-              <use xlink:href="/image/sprite.svg#icon-heart-outlined"></use>
-            </svg>
-          </a>
-          <a class="post-comment-delete" href="#">
-            <svg>
-              <use
-                xlink:href="/image/sprite.svg#icon-circle-with-cross"
-              ></use>
-            </svg>
-          </a>
-        </div> -->
     </div>
     <div class="post-stats">
       <div class="post-stats-icons">
-        <a href="#" class="post-stats-icon">
+        <a
+          data-likes="<%=post.likes.length%>"
+          href="/posts/toggle/<%=post._id%>"
+          class="post-stats-icon icon-heart toggle-like-button"
+        >
+          <%if(post.likes.includes(locals.user.id)){%>
+          <svg class="">
+            <use xlink:href="/image/sprite.svg#icon-heart"></use>
+          </svg>
+          <%}else{%>
           <svg class="">
             <use xlink:href="/image/sprite.svg#icon-heart-outlined"></use>
           </svg>
+          <%}%>
         </a>
         <a href="#" class="post-stats-icon">
           <svg class="">
@@ -75,11 +61,16 @@
         </a>
       </div>
       <p class="post-stats-count">
-        <span class="popup-stats-unit">14</span> likes
+        <span class="popup-stats-unit"><%=post.likes.length%></span> likes
       </p>
     </div>
     <%if(locals.user){%>
-    <form class="post-comments-form" action="/comments/create" method="POST">
+    <form
+      id="post-<%=post.id%>-comments-form"
+      class="post-comments-form"
+      action="/comments/create"
+      method="POST"
+    >
       <input
         type="text"
         name="content"
