--- a/views/post.ejs
+++ b/views/post.ejs
@@ -49,7 +49,7 @@
           </svg>
           <%}%>
         </a>
-        <a href="#" class="post-stats-icon">
+        <a href="#" class="post-stats-icon post-stats-comment">
           <svg class="">
             <use xlink:href="/image/sprite.svg#icon-bubble2"></use>
           </svg>
