--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -2,19 +2,35 @@
   <a href="#">
     <img class="post-comment-user" src="<%=comment.user.avatar%>" />
   </a>
-
-  <p class="post-comment-body">
-    <a href="/users/profile/<%=post.user.id%>" class="post-comment-username"
-      ><%=comment.user.username%></a
-    >
-    <span class="post-comment-content"><%=comment.content%></span>
-  </p>
-  <%if(locals.user && locals.user.id==comment.user.id){%>
-  <a class="post-comment-like" href="#">
-    <svg>
+  <div class="post-comment-block">
+    <p class="post-comment-body">
+      <a href="/users/profile/<%=post.user.id%>" class="post-comment-username"
+        ><%=comment.user.username%></a
+      >
+      <span class="post-comment-content"><%=comment.content%></span>
+    </p>
+    <p class="post-comment-stat">
+      <span class="post comment-unit"><%=comment.likes.length%></span> likes
+    </p>
+  </div>
+  <%if(locals.user){%>
+  <a
+    data-likes="<%=comment.likes.length%>"
+    class="post-comment-like"
+    href="/comments/toggle/<%=comment.id%>"
+  >
+    <%if(comment.likes.includes(locals.user.id)){%>
+    <svg class="">
+      <use xlink:href="/image/sprite.svg#icon-heart"></use>
+    </svg>
+    <%}else{%>
+    <svg class="">
       <use xlink:href="/image/sprite.svg#icon-heart-outlined"></use>
     </svg>
+    <%}%>
   </a>
+  <%}%> <%if(locals.user && locals.user.id==comment.user.id){%>
+
   <a
     class="post-comment-delete delete-comment-button"
     href="/comments/destroy/<%=comment.id%>"
