--- a/views/suggested-user.ejs
+++ b/views/suggested-user.ejs
@@ -8,5 +8,5 @@
     >
     <p class="user-card-name"><%=user.name%></p>
   </div>
-  <a href="#" class="user-card-follow">follow</a>
+  <a href="/users/follow/<%=user.id%>" class="user-card-follow">follow</a>
 </div>
