--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -179,7 +179,12 @@
           >update</a
         >
         <%}else{%>
-        <a href="#" class="profile-btn">follow</a>
+        <a
+          data-followers="<%=profile_user.followers.length%>"
+          href="/users/follow/<%=profile_user.id%>"
+          class="profile-btn toggle-follow-button"
+          ><%if(profile_user.followers.includes(locals.user.id)){%>unfollow<%}else{%>follow<%}%></a
+        >
         <%}%>
       </div>
       <div class="profile-stats">
@@ -188,10 +193,16 @@
           post
         </p>
         <p class="stat-followers">
-          <span class="profile-stats-unit followers-unit">3</span> followers
+          <span class="profile-stats-unit followers-unit"
+            ><%=profile_user.followers.length%></span
+          >
+          followers
         </p>
         <p class="stat-following">
-          <span class="profile-stats-unit following-unit">3</span> following
+          <span class="profile-stats-unit following-unit"
+            ><%=profile_user.following.length%></span
+          >
+          following
         </p>
       </div>
       <div class="profile-about">
